--- a/N2k-NMEA0183-N2k.vcxproj.filters
+++ b/N2k-NMEA0183-N2k.vcxproj.filters
@@ -16,34 +16,42 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="N2k-NMEA0183-N2k.ino" />
-    <None Include="cpp.hint" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="__vm\.N2k-NMEA0183-N2k.vsarduino.h">
+    <ClInclude Include="..\include\NMEA-Files\BoatData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BoatData.h">
+    <ClInclude Include="..\include\NMEA-Files\index_html.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="NMEA0183Handlers.h">
+    <ClInclude Include="..\include\NMEA-Files\List.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="N2kDataToNMEA0183.h">
+    <ClInclude Include="..\include\NMEA-Files\Log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AIS.h">
+    <ClInclude Include="..\include\NMEA-Files\N2kDataToNMEA0183.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\NMEA-Files\NMEA0183Handlers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\NMEA-Files\PrintfWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="NMEA0183Handlers.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="..\include\NMEA-Files\Log.cpp">
+      <Filter>Resource Files</Filter>
     </ClCompile>
-    <ClCompile Include="N2kDataToNMEA0183.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="..\include\NMEA-Files\N2kDataToNMEA0183.cpp">
+      <Filter>Resource Files</Filter>
     </ClCompile>
-    <ClCompile Include="AIS.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="..\include\NMEA-Files\NMEA0183Handlers.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\include\NMEA-Files\PrintfWrapper.cpp">
+      <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
