--- a/N2k-NMEA0183-N2k.vcxproj
+++ b/N2k-NMEA0183-N2k.vcxproj
@@ -71,7 +71,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\N2k-NMEA0183-N2k;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\cores\teensy3;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\cores\teensy3\avr;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\cores\teensy3\util;$(ProjectDir)..\libraries\NMEA2000\src;$(ProjectDir)..\libraries\NMEA0183;$(ProjectDir)..\libraries\NMEA2000_teensy;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\libraries\FlexCAN;$(ProjectDir)..\libraries\TeensyView\src;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\libraries\SPI;$(ProjectDir)..\include\NMEA-includes;$(ProjectDir)..\..\..\AppData\Local\Temp\VMBuilds\N2k-NMEA0183-N2k\teensy31\Release\pch;$(ProjectDir)..\N2k-NMEA0183-N2k;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\cores\teensy3;$(ProjectDir)..\libraries\NMEA2000\src;$(ProjectDir)..\libraries\NMEA0183;$(ProjectDir)..\libraries\NMEA2000_teensy;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\libraries\FlexCAN;$(ProjectDir)..\libraries\TeensyView\src;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\libraries\SPI;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensyC:\Program Files (x86)\Arduino\hardware\tools\arm\arm-none-eabi\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\tools\arm\lib\gcc\arm-none-eabi\5.4.1\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\tools\arm\arm-none-eabi\include\c++\5.4.1;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\tools\arm\arm-none-eabi\include\c++\5.4.1\tr1;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\tools\arm\arm-none-eabi\include\c++\5.4.1\bits;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\tools\arm\arm-none-eabi\include\c++\5.4.1\arm-none-eabi;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\N2k-NMEA0183-N2k;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\cores\teensy3;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\cores\teensy3\avr;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\cores\teensy3\util;$(ProjectDir)..\libraries\NMEA2000\src;$(ProjectDir)..\libraries\NMEA0183;$(ProjectDir)..\libraries\NMEA2000_teensy;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\libraries\FlexCAN;$(ProjectDir)..\libraries\TeensyView\src;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\libraries\SPI;$(ProjectDir)..\include\NMEA-Files;$(ProjectDir)..\..\..\AppData\Local\Temp\VMBuilds\N2k-NMEA0183-N2k\teensy31\Release\pch;$(ProjectDir)..\N2k-NMEA0183-N2k;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\cores\teensy3;$(ProjectDir)..\libraries\NMEA2000\src;$(ProjectDir)..\libraries\NMEA0183;$(ProjectDir)..\libraries\NMEA2000_teensy;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\libraries\FlexCAN;$(ProjectDir)..\libraries\TeensyView\src;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensy\avr\libraries\SPI;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\teensyC:\Program Files (x86)\Arduino\hardware\tools\arm\arm-none-eabi\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\tools\arm\lib\gcc\arm-none-eabi\5.4.1\include;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\tools\arm\arm-none-eabi\include\c++\5.4.1;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\tools\arm\arm-none-eabi\include\c++\5.4.1\tr1;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\tools\arm\arm-none-eabi\include\c++\5.4.1\bits;$(ProjectDir)..\..\..\..\..\Program Files (x86)\Arduino\hardware\tools\arm\arm-none-eabi\include\c++\5.4.1\arm-none-eabi;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>$(ProjectDir)__vm\.N2k-NMEA0183-N2k.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <PreprocessorDefinitions>_VMICRO_INTELLISENSE;__HARDWARE_mk20dx256__;__HARDWARE_MK20DX256__;__MK20DX256__;TEENSYDUINO=157;ARDUINO=108019;ARDUINO_TEENSY32;F_CPU=96000000;USB_SERIAL;LAYOUT_US_ENGLISH;__cplusplus=201103L;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
@@ -99,28 +99,25 @@
     <ProjectCapability Include="VisualMicro" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\include\NMEA-Files\AIS.cpp" />
+    <ClCompile Include="..\include\NMEA-Files\Log.cpp" />
+    <ClCompile Include="..\include\NMEA-Files\N2kDataToNMEA0183.cpp" />
+    <ClCompile Include="..\include\NMEA-Files\NMEA0183Handlers.cpp" />
+    <ClCompile Include="..\include\NMEA-Files\PrintfWrapper.cpp" />
     <ClCompile Include="N2k-NMEA0183-N2k.ino">
       <FileType>CppCode</FileType>
       <DeploymentContent>true</DeploymentContent>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\NMEA-includes\AIS.h" />
-    <ClInclude Include="..\include\NMEA-includes\BoatData.h" />
-    <ClInclude Include="..\include\NMEA-includes\index_html.h" />
-    <ClInclude Include="..\include\NMEA-includes\List.h" />
-    <ClInclude Include="..\include\NMEA-includes\Log.h" />
-    <ClInclude Include="..\include\NMEA-includes\N2kDataToNMEA0183.h" />
-    <ClInclude Include="..\include\NMEA-includes\NMEA0183Handlers.h" />
-    <ClInclude Include="..\include\NMEA-includes\PrintfWrapper.h" />
-    <ClInclude Include="__vm\.N2k-NMEA0183-N2k.vsarduino.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\include\NMEA-includes\AIS.cpp" />
-    <ClCompile Include="..\include\NMEA-includes\Log.cpp" />
-    <ClCompile Include="..\include\NMEA-includes\N2kDataToNMEA0183.cpp" />
-    <ClCompile Include="..\include\NMEA-includes\NMEA0183Handlers.cpp" />
-    <ClCompile Include="..\include\NMEA-includes\PrintfWrapper.cpp" />
+    <ClInclude Include="..\include\NMEA-Files\AIS.h" />
+    <ClInclude Include="..\include\NMEA-Files\BoatData.h" />
+    <ClInclude Include="..\include\NMEA-Files\index_html.h" />
+    <ClInclude Include="..\include\NMEA-Files\List.h" />
+    <ClInclude Include="..\include\NMEA-Files\Log.h" />
+    <ClInclude Include="..\include\NMEA-Files\N2kDataToNMEA0183.h" />
+    <ClInclude Include="..\include\NMEA-Files\NMEA0183Handlers.h" />
+    <ClInclude Include="..\include\NMEA-Files\PrintfWrapper.h" />
   </ItemGroup>
   <PropertyGroup>
     <DebuggerFlavor>VisualMicroDebugger</DebuggerFlavor>
