--- a/N2k-NMEA0183-N2k.vcxproj.filters
+++ b/N2k-NMEA0183-N2k.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="..\include\NMEA-Files\PrintfWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="__vm\.N2k-NMEA0183-N2k.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="N2k-NMEA0183-N2k.ino" />
